--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Jae's Coffee Art|| About</title>
+    <title>Jae's Coffee Art|| contact</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -38,58 +38,84 @@
       <div class="banner">
         <h2>Turn your memories into a picture</h2>
         <h1>Jae's<br />Coffe Art</h1>
-        <a href="about.html" class="btn banner-btn">explore</a>
+        <a href="contact.html" class="btn banner-btn">explore</a>
       </div>
     </header>
     <!-- end of header -->
-    <!-- about  -->
-    <section>
+    <!-- contact -->
+    <section class="contact">
       <div class="section-center clearfix">
-        <!-- about-img -->
-        <article class="about-img">
-          <div class="about-picture-container">
-            <img
-              src="./images/img0.jpg"
-              alt="tea kettle"
-              class="about-picture"
-            />
+        <!-- contact info -->
+        <article class="contact-info">
+          <!-- contact item -->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-location-arrow"></i>
+              </span>
+              address
+            </h4>
+            <h4 class="contact">
+              San Pedro Sula, Cortes<br />
+              Honduras
+            </h4>
           </div>
+          <!-- end of contact item -->
+          <!-- contact item -->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-envelope"></i>
+              </span>
+              Email
+            </h4>
+            <h4 class="contact">astefanyareyes@gmail.com</h4>
+          </div>
+          <!-- end of contact item -->
+          <!-- contact item -->
+          <div class="contact-item">
+            <h4 class="contact-title">
+              <span class="contact-icon">
+                <i class="fas fa-phone"></i>
+              </span>
+              telephone
+            </h4>
+            <h4 class="contact">+504 9619-8937</h4>
+          </div>
+          <!-- end of contact item -->
         </article>
-        <!-- about-info -->
-        <article class="about-info">
-          <!-- section title -->
-          <div class="section-title">
-            <h3>about our</h3>
-            <h2>coffee art</h2>
-          </div>
-          <!-- end of section title -->
-          <p class="about-text">
-            We want to maintain our identity as Hondurans and share with others
-            the wonders of our country in a different way. Honduras is known for
-            its beauty, art and culture and within these we cannot forget our
-            coffee. We offer our clients a variety of these four things, turning
-            their memories and ideas into art.
-          </p>
-          <p class="about-text">
-            Working with love, and proudly keeping our essence!
-          </p>
-          <p class="about-text">
-            Jae's Coffee Art started 2 years ago. Angelica Reyes started making
-            art with coffee grounds and her first two pieces were two portraits
-            and then she started selling her art to visitors and friends at the
-            university where she was studying at the time. Jae's Cofee Art
-            started out selling only 10 paintings and in two years we have sold
-            over 100 pieces. Jae's Coffee Art has been a blessing and now we are
-            proud that many people have one of these wonderful works of art. We
-            are happy that many people from Honduras, USA, South Africa and
-            England have bought art from us. Jae's Coffee Art is growing and we
-            want you to be part of that.
-          </p>
-          <a href="index.html" class="btn">Back Home</a>
+        <!-- contact form -->
+        <article class="contact-form">
+          <h3>contact us</h3>
+          <form action="https://formspree.io/f/xyyqzobd" method="POST">
+            <div class="form-group">
+              <!-- inputs -->
+              <input
+                type="text"
+                placeholder="name"
+                class="form-control"
+                name="name"
+              />
+              <input
+                type="email"
+                placeholder="email"
+                class="form-control"
+                name="email"
+              />
+              <textarea
+                name="message"
+                placeholder="message"
+                class="form-control"
+                rows="5"
+              ></textarea>
+            </div>
+            <!-- button -->
+            <button type="submit" class="submit-btn btn">submit here</button>
+          </form>
         </article>
       </div>
     </section>
-    <!-- end of about -->
+    <!-- end of contacts-->
     <!-- footer -->
     <footer class="footer">
       <div class="section-center">
