--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="skills.html" class="nav-link">skills</a></li>
         <li><a href="about.html" class="nav-link">about</a></li>
         <li><a href="products.html" class="nav-link">products</a></li>
+        <li><a href="contact.html" class="nav-link">Contacts</a></li>
       </ul>
     </nav>
     <!-- header -->
@@ -113,7 +114,7 @@
           <p class="about-text">
             Working with love, and proudly keeping our essence!
           </p>
-          <a href="about.html" class="btn">learn more</a>
+          <a href="about.html" class="btn">Read More</a>
         </article>
       </div>
     </section>
@@ -130,8 +131,11 @@
           </div>
           <!-- end of section title -->
           <p class="product-text">
-            We have a variety of designs, such as portraits, Honduran tourist
-            art and customised art.
+            We have a wide variety of designs, such as portraits, Honduran
+            tourist art and personalized art. You can also find some of our
+            paintings. Go and have a look at our products. If you are interested
+            in any of them or you want a specific one, please do not hesitate to
+            contact us.
           </p>
           <a href="products.html" class="btn">inventory</a>
         </article>
@@ -155,7 +159,7 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">personalize art</h4>
+            <h4 class="product-title">Customised Art</h4>
             <h4 class="product-price">$20</h4>
           </div>
           <!-- end of single product -->
@@ -205,7 +209,7 @@
               We turn your ideas into art. Personalize and create your own
               desings with us.
             </p>
-            <a href="products.html" class="btn service-btn">read more</a>
+            <a href="contact.html" class="btn service-btn">Contact us</a>
           </div>
         </article>
         <!-- end of single card -->
@@ -231,7 +235,7 @@
               We have a variety of paintings about nature that you can also buy
               from us.
             </p>
-            <a href="products.html" class="btn service-btn">read more</a>
+            <a href="contact.html" class="btn service-btn">Contact us</a>
           </div>
         </article>
         <!-- end of single card -->
@@ -257,7 +261,7 @@
               If you are going to give it as a gift, we wrap your picture, and
               we add a little card .
             </p>
-            <a href="products.html" class="btn service-btn">read more</a>
+            <a href="contact.html" class="btn service-btn">Contact us</a>
           </div>
         </article>
         <!-- end of single card -->
