--- a/products.html
+++ b/products.html
@@ -30,6 +30,7 @@
         <li><a href="skills.html" class="nav-link">skills</a></li>
         <li><a href="about.html" class="nav-link">about</a></li>
         <li><a href="products.html" class="nav-link">products</a></li>
+        <li><a href="contact.html" class="nav-link">Contacts</a></li>
       </ul>
     </nav>
     <!-- header -->
@@ -53,8 +54,11 @@
           </div>
           <!-- end of section title -->
           <p class="product-text">
-            We have a variety of designs, such as portraits, Honduran tourist
-            art and customised art.
+            We have a wide variety of designs, such as portraits, Honduran
+            tourist art and personalized art. You can also find some of our
+            paintings. Go and have a look at our products. If you are interested
+            in any of them or you want a specific one, please do not hesitate to
+            contact us.
           </p>
           <a href="products.html" class="btn">inventory</a>
         </article>
@@ -78,7 +82,7 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">personalize art</h4>
+            <h4 class="product-title">Customised Art</h4>
             <h4 class="product-price">$20</h4>
           </div>
           <!-- end of single product -->
@@ -130,7 +134,7 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">Personalize art</h4>
+            <h4 class="product-title">Customised Art</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -140,7 +144,7 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">Personalize art</h4>
+            <h4 class="product-title">Customised Art</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -150,7 +154,7 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">Personalize art</h4>
+            <h4 class="product-title">Customised Art</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
@@ -160,7 +164,7 @@
               alt="single product"
               class="product-img"
             />
-            <h4 class="product-title">Personalize art</h4>
+            <h4 class="product-title">Customised Art</h4>
           </div>
           <!-- end of single product -->
           <!-- single product -->
