--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- single skil -->
       <article class="skill">
         <span class="skill-icon">
-          <i class="fas fa-mug-hot"></i>
+          <i class="fa fa-check"></i>
         </span>
         <h4 class="skill-title">Quality</h4>
         <p class="skill-text">Art made of 100% honduran coffee.</p>
