--- a/products.html
+++ b/products.html
@@ -190,7 +190,7 @@
           <!-- single product -->
           <div class="product">
             <img
-              src="../images/paint1.jpg"
+              src="/../images/paint1.jpg"
               alt="single product"
               class="product-img"
             />
@@ -200,7 +200,7 @@
           <!-- single product -->
           <div class="product">
             <img
-              src="../images/paint4.jpg"
+              src="/../images/paint4.jpg"
               alt="single product"
               class="product-img"
             />
