--- a/products.html
+++ b/products.html
@@ -190,7 +190,7 @@
           <!-- single product -->
           <div class="product">
             <img
-              src="../jae's coffee art/images/paint1.JPG"
+              src="../jae's coffee art/images/paint2.jpg"
               alt="single product"
               class="product-img"
             />
