--- a/products.html
+++ b/products.html
@@ -187,10 +187,11 @@
             <h4 class="product-title">portrait</h4>
           </div>
           <!-- end of single product -->
+
           <!-- single product -->
           <div class="product">
             <img
-              src="/./images/paint1.JPG"
+              src="./images/paint1.jpg"
               alt="single product"
               class="product-img"
             />
