--- a/products.html
+++ b/products.html
@@ -187,11 +187,10 @@
             <h4 class="product-title">portrait</h4>
           </div>
           <!-- end of single product -->
-
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/paint1.jpg"
+              src="./images/paint1.JPG"
               alt="single product"
               class="product-img"
             />
