--- a/products.html
+++ b/products.html
@@ -190,7 +190,7 @@
           <!-- single product -->
           <div class="product">
             <img
-              src="./images/paint1.JPG"
+              src="./images/img30.jpg"
               alt="single product"
               class="product-img"
             />
