--- a/skills.html
+++ b/skills.html
@@ -37,7 +37,7 @@
     <header class="header">
       <div class="banner">
         <h2>Turn your memories into a picture</h2>
-        <h1>Jae's <br />Coffe Art</h1>
+        <h1>Jae's <br />Coffee Art</h1>
         <a href="skills.html" class="btn banner-btn">explore</a>
       </div>
     </header>
